ingress/photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  namespace: photoprism
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - photoprism.test.com
    secretName: ingress-secrets
  rules:
  - host: photoprism.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism-service
            port:
              number: 80
